# story_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
skills/continuation-skill/: SKILL.md
skills/continuation-skill/references/: learned_techniques.md
skills/outline-skill/: SKILL.md
skills/outline-skill/references/: learned_techniques.md
skills/rewrite-skill/: SKILL.md
skills/rewrite-skill/references/: learned_techniques.md
skills/writing-skill/: SKILL.md
src/: chainlit_app.py  cli.py  config.py  main.py
src/agents/: __init__.py  character.py  narrator.py  planner.py
src/generation/: __init__.py  chapter.py  outline.py  prompts.py  thinking.py
src/generation/services/: __init__.py  chapter_workflow.py  (+1 more)
src/interactive/: __init__.py  workflow.py
src/models/: __init__.py  base.py  deepseek.py  glm.py  kimi.py
src/schema/: __init__.py  outline.py  story.py
src/simulation/: __init__.py  event.py  memory.py  runner.py  world.py
src/skills_runtime/: __init__.py  miner.py  registry.py  router.py  writing.py
src/storage/: __init__.py  manager.py
src/story_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tools/: __init__.py  edit_tools.py  read_tools.py  thinking_tools.py
src/utils/: __init__.py  word_count.py
tests/: test_interactive_workflow.py  test_novel_skill_miner.py  test_outline_pipeline.py  test_relationships.py  test_skill_router.py  test_skill_runtime.py  test_story_tools.py  test_thinking_tools.py  test_word_count_consistency.py  test_world_state_think_update.py
(+1 files in other folders)
